# Nano

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clear_demo.c  clear_demo.html  clear_demo.js  cmake_install.cmake  nano.h  nano_native.h  nano_web.h  server.py  shell.html
.github/workflows/: build.yml
clear_demo/: CMakeLists.txt  Makefile  clear_demo.c  clear_demo.js  cmake_install.cmake
dot_demo/: Makefile  cmake_install.cmake  dot_demo.html  dot_demo.js
include/: .clangd  CMakeLists.txt  cimgui_impl_wgpu.h  nano_cimgui.h  wgpu_entry.h
include/assets/shaders/: imgui_frag.frag  imgui_vert.vert
include/assets/shaders/spv/: imgui_frag.spv  imgui_vert.spv
include/assets/shaders/wgpu-shaders/: cimgui-wgpu.wgsl  compute-wgpu.wgsl  cube.wgsl  dot.wgsl  rgb-triangle.wgsl  texture.wgsl  uv-triangle.wgsl  wave.wgsl
include/glfw3webgpu/: .clangd  CMakeLists.txt
include/webgpu/: .gitignore
include/wgsl-parser/: CMakeLists.txt  test.c  wgsl-parser.c  wgsl-parser.h
include/wgsl-parser/assets/: compute-wgpu.wgsl
samples/: CMakeLists.txt  clear_demo.c  shell.html
samples/clear_demo/: .clangd  CMakeLists.txt  clear_demo.c  clear_demo.data  clear_demo.html  clear_demo.js
samples/cube_demo/: .clangd  CMakeLists.txt  Makefile  cmake_install.cmake  cube.c  cube_demo.data  cube_demo.html  cube_demo.js
samples/dot_demo/: .clangd  CMakeLists.txt  Makefile  cmake_install.cmake  dot.c
samples/timing_test/: CMakeLists.txt  timing_test.c
samples/triangle_demo/: CMakeLists.txt  triangle_demo.c  triangle_demo.html  triangle_demo.js
samples/wave_demo/: .clangd  CMakeLists.txt  wave.c
timing_test/: Makefile  cmake_install.cmake  timing_test.c  timing_test.html  timing_test.js
triangle_demo/: Makefile  cmake_install.cmake  triangle_demo.c  triangle_demo.data  triangle_demo.js
wave_demo/: Makefile  cmake_install.cmake  wave.c  wave_demo.data  wave_demo.html  wave_demo.js
